# keezyboost40

./: .gitignore  .gitmodules  ASSEMBLY.md  DESIGN.md  README.md
case/: README.md  keezyboost40 v15.step  keezyboost40 v15.stl  keezyboost40 v16.step  keezyboost40 v16.stl
drafts/: KLE.txt
firmware/: README.md  sporewoh_keezyboost40_default.uf2
firmware/keezus/: Cargo.toml  README.md  build.rs
firmware/keezus/.cargo/: config.toml
firmware/keezus/assets/: pi.raw
firmware/keezus/src/: delay.rs  hid_descriptor.rs  key_codes.rs  key_mapping.rs  layout.rs  main.rs  main_old.rs
outlines/: plate-2022-07-09T23 04 02.220Z.dxf  plate-2022-07-10T20 48 17.110Z.dxf  plate_outline.dxf
pcb/keezyboost40/: #auto_saved_files#  _autosave-keezyboost40.kicad_pcb  fp-info-cache  fp-lib-table  keezyboost40.kicad_pcb  keezyboost40.kicad_prl  keezyboost40.kicad_pro  keezyboost40.kicad_sch  keezyboost40.kicad_sch-bak  sym-lib-table
pcb/keezyboost40/gerbers/: keezyboost40-B_Cu.gbr  keezyboost40-B_Mask.gbr  keezyboost40-B_Paste.gbr  keezyboost40-B_Silkscreen.gbr  keezyboost40-Edge_Cuts.gbr  keezyboost40-F_Cu.gbr  keezyboost40-F_Mask.gbr  keezyboost40-F_Paste.gbr  keezyboost40-F_Silkscreen.gbr  keezyboost40-NPTH-drl_map.ps  keezyboost40-NPTH.drl  keezyboost40-PTH-drl_map.ps  keezyboost40-PTH.drl  keezyboost40-job.gbrjob
pcb/kicad-plugins/: horizon-board-producer.py
pcb/sporewoh-keyboard-extras/: kicub_keyboard_extras.kicad_sym
temp/: keezyboost40-bottom-plate.kicad_prl  keezyboost40-bottom-plate.kicad_pro  keezyboost40-top-plate.kicad_pcb  keezyboost40-top-plate.kicad_prl  keezyboost40-top-plate.kicad_pro  keezyboost40.kicad_prl  keezyboost40.kicad_pro
temp/keezyboost40/: keezyboost40-B_Cu.gbl  keezyboost40-B_Mask.gbs  keezyboost40-B_SilkS.gbo  keezyboost40-Edge_Cuts.gm1  keezyboost40-F_Cu.gtl  keezyboost40-F_Mask.gts  keezyboost40-F_SilkS.gto  keezyboost40-NPTH.drl  keezyboost40-PTH.drl
(+2 files in other folders)
