[package]
name = "keezus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
embedded-time = "0.12"
panic-reset = "0.1"
rp2040-boot2 = "0.2"
rp2040-hal = "0.5"
usb-device = "0.2"
usbd-hid = "0.6"
st7735-lcd = "0.8"
embedded-graphics = "0.7.1"

# Dependencies for debug probe
defmt = "0.3" # Macros and support for deferred formatting logging
defmt-rtt = "0.3" # Contains a definition for a #[global_logger]
panic-probe = { version = "0.3", features = ["print-defmt"] }