[package]
name = "keezus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#   keyberon = { git = "https://github.com/TeXitoi/keyberon" }
# Use local fork that has hardcoded timeout in matrix scanning function
# Used until https://github.com/TeXitoi/keyberon/issues/97 is resolved
# keyberon = { git = "https://github.com/ChrisChrisLoLo/keyberon", branch = "delay_workaround" }
# Local fork
keyberon = {path = "../keyberon"}
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.0.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12"
panic-reset = "0.1"
panic-halt= "0.2.0"
rp2040-boot2 = { version = "0.2", optional = true }
rp2040-hal = { version = "0.5", features=["rt"] }
usb-device = "0.2"
usbd-hid = "0.6"
st7735-lcd = "0.8"
embedded-graphics = "0.7.1"
asm-delay = "0.9.0"

# Dependencies for debug probe
defmt = "0.3" # Macros and support for deferred formatting logging
defmt-rtt = "0.3" # Contains a definition for a #[global_logger]
panic-probe = { version = "0.3", features = ["print-defmt"] }

[features]
default = ["boot2"]
boot2 = ["rp2040-boot2"]